--- a/about.html
+++ b/about.html
@@ -136,36 +136,36 @@
                     <h3>Programming Languages</h3>
                     <ul class="skill-list">
                         <li><i class="fas fa-check"></i> Python</li>
-                        <li><i class="fas fa-check"></i> JavaScript</li>
-                        <li><i class="fas fa-check"></i> Java</li>
+                        <li><i class="fas fa-check"></i> C</li>
+                    
                         <li><i class="fas fa-check"></i> C++</li>
                     </ul>
                 </div>
                 <div class="skill-category">
                     <h3>AI & Machine Learning</h3>
                     <ul class="skill-list">
-                        <li><i class="fas fa-check"></i> TensorFlow</li>
-                        <li><i class="fas fa-check"></i> PyTorch</li>
-                        <li><i class="fas fa-check"></i> Scikit-learn</li>
+                        <li><i class="fas fa-check"></i> Machine Learning</li>
+                        <li><i class="fas fa-check"></i>Data Science</li>
+                        <li><i class="fas fa-check"></i>DSA</li>
                         <li><i class="fas fa-check"></i> Deep Learning</li>
                     </ul>
                 </div>
                 <div class="skill-category">
                     <h3>Web Development</h3>
                     <ul class="skill-list">
-                        <li><i class="fas fa-check"></i> HTML5/CSS3</li>
-                        <li><i class="fas fa-check"></i> React.js</li>
-                        <li><i class="fas fa-check"></i> Node.js</li>
-                        <li><i class="fas fa-check"></i> Express.js</li>
+                        <li><i class="fas fa-check"></i> HTML</li>
+                        <li><i class="fas fa-check"></i> CSS</li>
+                        <li><i class="fas fa-check"></i> JS</li>
+                        <li><i class="fas fa-check"></i> Django</li>
+                        <li><i class="fas fa-check"></i> Flask</li>
                     </ul>
                 </div>
                 <div class="skill-category">
                     <h3>Tools & Technologies</h3>
                     <ul class="skill-list">
                         <li><i class="fas fa-check"></i> Git/GitHub</li>
-                        <li><i class="fas fa-check"></i> Docker</li>
-                        <li><i class="fas fa-check"></i> AWS</li>
-                        <li><i class="fas fa-check"></i> MongoDB</li>
+                        <li><i class="fas fa-check"></i> Power Bi</li>
+                       
                     </ul>
                 </div>
             </div>
