--- a/contact.html
+++ b/contact.html
@@ -197,7 +197,7 @@
                 <div class="contact-details">
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
-                        <a href="mailto:ankitkumbhkar22@gmail.com">ankitkumbhkar@example.com</a>
+                        <a href="mailto:ankitkumbhkar22@gmail.com">ankitkumbhkar22@gmail.com</a>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
@@ -212,16 +212,16 @@
                 <div class="social-links-contact">
                     <h4>Connect with me</h4>
                     <div class="social-icons">
-                        <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/ankit-kumbhkar-41a029291/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/ankitkumbhkar22" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/ankit_kumbhkar_22/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
 
             <div class="contact-form">
-                <form id="contactForm" onsubmit="return handleSubmit(event)">
+                <form  action="https://formspree.io/f/mnndyeog" method="POST" id="contactForm" onsubmit="return handleSubmit(event)">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" required>
