--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/ankit-kumbhkar-41a029291/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/ankitkumbhkar22" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/ankit_kumbhkar_22/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
             <p>&copy; 2024 Ankit Kumbhkar. All rights reserved.</p>
