--- a/contact.html
+++ b/contact.html
@@ -221,7 +221,8 @@
             </div>
 
             <div class="contact-form">
-                <form  action="https://formspree.io/f/mnndyeog" method="POST" id="contactForm" onsubmit="return handleSubmit(event)">
+                <form  action="https://formspree.io/f/xldbyrez" method="POST"
+                 id="contactForm" onsubmit="return handleSubmit(event)">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" required>
