--- a/contact.html
+++ b/contact.html
@@ -222,7 +222,7 @@
 
             <div class="contact-form">
                 <form  action="https://formspree.io/f/xldbyrez" method="POST"
-                  onsubmit="return handleSubmit(event)">
+                 id="contactForm" ">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" required>
