--- a/about.html
+++ b/about.html
@@ -115,14 +115,14 @@
         <div class="about-grid">
             <div class="about-text">
                 <h2>About Me</h2>
-                <p>I am a 3rd-year B.Tech student specializing in Computer Science and Engineering (CSE) with a strong focus on Artificial Intelligence and Data Science. My passion for technology and innovation drives me to explore the fascinating world of AI and its applications in solving real-world problems.</p>
+                <p>I am a 4th-year B.Tech student specializing in Computer Science and Engineering (CSE) with a strong focus on Artificial Intelligence and Data Science. My passion for technology and innovation drives me to explore the fascinating world of AI and its applications in solving real-world problems.</p>
                 <p>Throughout my academic journey, I have developed a deep understanding of machine learning algorithms, data analysis, and web development. I believe in continuous learning and staying updated with the latest technological advancements.</p>
                 <p>My goal is to leverage my skills and knowledge to create innovative solutions that make a positive impact on society. I am particularly interested in developing AI-powered applications that can help solve complex problems in various domains.</p>
             </div>
             <div class="about-text">
                 <h2>Education</h2>
                 <p><strong>Bachelor of Technology in Computer Science and Engineering</strong><br>
-                Current: 3rd Year<br>
+                Current: 4th Year<br>
                 Focus: Artificial Intelligence and Data Science</p>
                 <p>I am pursuing my B.Tech degree with a specialization in CSE, where I have gained comprehensive knowledge in programming, algorithms, data structures, and various aspects of computer science.</p>
             </div>
@@ -165,6 +165,7 @@
                     <ul class="skill-list">
                         <li><i class="fas fa-check"></i> Git/GitHub</li>
                         <li><i class="fas fa-check"></i> Power Bi</li>
+                        <li><i class="fas fa-check"></i> MySQL</li>
                        
                     </ul>
                 </div>
@@ -180,10 +181,12 @@
                 <a href="https://github.com/ankitkumbhkar22" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
-            <p>&copy; 2024 Ankit Kumbhkar. All rights reserved.</p>
+             <p>&copy; <span id="year"></span>  Made by ❤️ Ankit Kumbhkar. All rights reserved.</p>
         </div>
     </footer>
-
+    <script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
     <script src="js/main.js"></script>
     <script src="js/theme.js"></script>
 </body>
