--- a/contact.html
+++ b/contact.html
@@ -253,10 +253,12 @@
                 <a href="https://github.com/ankitkumbhkar22" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
-            <p>&copy; 2024 Ankit Kumbhkar. All rights reserved.</p>
+            <p>&copy; Made by ❤️ Ankit Kumbhkar. All rights reserved.</p>
         </div>
     </footer>
-
+    <script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
     <script src="js/main.js"></script>
     <script src="js/theme.js"></script>
     <script>
