--- a/index.html
+++ b/index.html
@@ -80,10 +80,12 @@
                 <a href="https://www.instagram.com/ankit_kumbhkar_22/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
-            <p>&copy; 2024 Ankit Kumbhkar. All rights reserved.</p>
+            <p>&copy; Made by ❤️ Ankit Kumbhkar. All rights reserved.</p>
         </div>
     </footer>
-
+    <script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
     <script src="js/main.js"></script>
     <script src="js/theme.js"></script>
 </body>
