--- a/resume.html
+++ b/resume.html
@@ -131,7 +131,7 @@
     <section class="resume-section">
         <div class="resume-header">
             <h2>Resume</h2>
-            <a href="images\pdf\Ankit Resume.pdf" class="download-resume" download>
+            <a href="images\pdf\My_Resume_Ankit.pdf" class="download-resume" download>
                 <i class="fas fa-download"></i> Download Resume
             </a>
         </div>
@@ -161,6 +161,7 @@
                         <i class="fas fa-database"></i>
                         <span>Data Science</span>
                     </div>
+                   
                     <div class="skill-item">
                         <i class="fas fa-chart-bar"></i>
                         <span>PowerBI</span>
@@ -181,6 +182,10 @@
                         <i class="fab fa-js"></i>
                         <span>JavaScript</span>
                     </div>
+                     <div class="skill-item">
+                        <i class="fas fa-database"></i>
+                        <span>MySQL</span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -195,10 +200,12 @@
                 <a href="https://www.instagram.com/ankit_kumbhkar_22/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
-            <p>&copy; 2024 Ankit Kumbhkar. All rights reserved.</p>
+            <p>&copy; Made by ❤️ Ankit Kumbhkar.</p>
         </div>
     </footer>
-
+    <script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
     <script src="js/main.js"></script>
     <script src="js/theme.js"></script>
 </body>
