--- a/certifications.html
+++ b/certifications.html
@@ -518,7 +518,7 @@
                 <a href="https://github.com/ankitkumbhkar22" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
-            <p>&copy; Made by ❤️ Ankit Kumbhkar. All rights reserved.</p>
+            <p>&copy;<span id="year"></span>  Made by ❤️ Ankit Kumbhkar. All rights reserved.</p>
         </div>
     </footer>
     <script>
