--- a/resume.html
+++ b/resume.html
@@ -200,7 +200,7 @@
                 <a href="https://www.instagram.com/ankit_kumbhkar_22/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
-            <p>&copy; Made by ❤️ Ankit Kumbhkar.</p>
+            <p>&copy; <span id="year"></span>  Made by ❤️ Ankit Kumbhkar.</p>
         </div>
     </footer>
     <script>
