Added project link and code

--- a/resume.html
+++ b/resume.html
@@ -131,7 +131,7 @@
     <section class="resume-section">
         <div class="resume-header">
             <h2>Resume</h2>
-            <a href="images\pdf\My_Resume_Ankit.pdf" class="download-resume" download>
+            <a href="images/pdf/My_Resume_Ankit.pdf" class="download-resume" download>
                 <i class="fas fa-download"></i> Download Resume
             </a>
         </div>
