--- a/projects.html
+++ b/projects.html
@@ -140,8 +140,8 @@
                         <span class="project-tag">Scikit-learn</span>
                     </div>
                     <div class="project-links">
-                        <a href="#" target="_blank"><i class="fab fa-github"></i> View Code</a>
-                        <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href="https://github.com/ankitkumbhkar22/First-Minor-Project-Car-Price-Prediction" target="_blank"><i class="fab fa-github"></i> View Code</a>
+                        <a href="https://ankitkumbhkar22.pythonanywhere.com/" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                     </div>
                 </div>
             </div>
