Add Project Videos

--- a/projects.html
+++ b/projects.html
@@ -144,6 +144,12 @@
                         <a href="https://ankitkumbhkar22.pythonanywhere.com/" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                     </div>
                 </div>
+                <div class="video-container">  <!-- video Container -->
+                    <video controls>
+                        <source src="videos/Car Price Prediction Project .mp4" type="video/mp4">
+                         Your browser does not support the video tag.
+                     </video>
+                </div>
             </div>
 
             <!-- Fee Management System -->
@@ -161,6 +167,12 @@
                         <a href="#" target="_blank"><i class="fab fa-github"></i> View Code</a>
                         <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                     </div>
+                </div>
+                <div class="video-container">
+                    <video controls>
+                        <source src="videos/Minor Project -2 .mp4" type="video/mp4">
+                         Your browser does not support the video tag.
+                     </video>
                 </div>
             </div>
 
