Add Project Videos and certificates

--- a/projects.html
+++ b/projects.html
@@ -143,13 +143,16 @@
                         <a href="https://github.com/ankitkumbhkar22/First-Minor-Project-Car-Price-Prediction" target="_blank"><i class="fab fa-github"></i> View Code</a>
                         <a href="https://ankitkumbhkar22.pythonanywhere.com/" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                     </div>
+                    <!-- YouTube video embed -->
+                        <iframe width="350" height="315" 
+                                 src="https://www.youtube.com/embed/yE346X-GtHM" 
+                                 title="Car Price Prediction" 
+                                 frameborder="0" 
+                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                                 allowfullscreen>
+                         </iframe>
                 </div>
-                <div class="video-container">  <!-- video Container -->
-                    <video controls>
-                        <source src="videos/Car Price Prediction Project .mp4" type="video/mp4">
-                         Your browser does not support the video tag.
-                     </video>
-                </div>
+                
             </div>
 
             <!-- Fee Management System -->
@@ -167,13 +170,16 @@
                         <a href="#" target="_blank"><i class="fab fa-github"></i> View Code</a>
                         <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                     </div>
+                     <!-- YouTube video embed -->
+                        <iframe width="350" height="315" 
+                                 src="https://www.youtube.com/embed/5V4lNw6Wy5o" 
+                                 title="Management System" 
+                                 frameborder="0" 
+                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                                 allowfullscreen>
+                         </iframe>
                 </div>
-                <div class="video-container">
-                    <video controls>
-                        <source src="videos/Minor Project -2 .mp4" type="video/mp4">
-                         Your browser does not support the video tag.
-                     </video>
-                </div>
+               
             </div>
 
             <!-- Medition -->
