--- a/certifications.html
+++ b/certifications.html
@@ -482,7 +482,7 @@
             
         </div>
 
-        <!-- Academic Documents Section -->
+        <!-- Academic Documents Sections -->
       <!--  <div class="academic-section">
             <h3>Academic Documents</h3>
             <div class="academic-documents">
