--- a/certifications.html
+++ b/certifications.html
@@ -445,7 +445,7 @@
             <!-- Bootcamp on Flask Full Stack Development -->
             <div class="certification-card">
                 <h3>Bootcamp on Flask Full Stack Development</h3>
-                <img src="images/cerificates/Python Bootcamp.jpg" alt="DSA Certificate">
+                <img src="images/cerificates/Python Bootcamp.jpg" alt="Training Certificate">
                 <div class="issuer">CODEXINTERN</div>
                 <div class="date">Completed: 21 July - 24 July 2025</div> 
                 <p>"Successfully completed the CODEXINTERN virtual Bootcamp on Flask Full Stack Development (21–24 July 2025). Certificate ID: cxiffd20250772</p>
@@ -457,7 +457,7 @@
             <!-- Internship in Front-End Development -->
             <div class="certification-card">
                 <h3>Internship in Front-End Development</h3>
-                <img src="images/cerificates/InternshipCodexintern.jpg" alt="DSA Certificate">
+                <img src="images/cerificates/InternshipCodexintern.jpg" alt="Internship Certificate">
                 <div class="issuer">CODEXINTERN</div>
                 <div class="date">Completed: 1 August - 31 August 2025</div> 
                 <p>"Successfully completed the CODEXINTERN virtual Internship in Front-End Development (1–31 August 2025) Certificate ID: cxifnwd2025089141</p>
@@ -469,12 +469,23 @@
              <!-- Master FSD Roadmap with Practical Presentation -->
             <div class="certification-card">
                 <h3>Master FSD Roadmap with Practical Presentation</h3>
-                <img src="images/cerificates/SkillEctedWebinar.jpg" alt="DSA Certificate">
+                <img src="images/cerificates/SkillEctedWebinar.jpg" alt="Webinar Certificate">
                 <div class="issuer">SkillEcted</div>
                 <div class="date">Completed: 21 August 2025</div> 
                 <p>"Participated in the 'Master FSD Roadmap with Practical Presentation' webinar by SkillEcted (21 August 2025). Certificate ID: MAGW1TJM."</p>
                 <div class="certification-links">
                     <a href="images/cerificates/SkillEctedWebinar.jpg" download><i class="fas fa-download"></i> Download Certificate</a>
+                    <a href="" target="_blank"><i class="fas fa-external-link-alt"></i> Verify</a>
+                </div>
+            </div>
+            <div class="certification-card">
+                <h3>Letter of Recommendation</h3>
+                <img src="images/cerificates/Letter OF Recommendation.jpg" alt="letter">
+                <div class="issuer">CODEXINTERN</div>
+                <div class="date">Completed: August 2025</div> 
+                <p>"Letter of Recommendation from CODEXINTERN for my Front-End Developer Internship, recognizing my adaptability,and technical skills ."</p>
+                <div class="certification-links">
+                    <a href="images/cerificates/Letter OF Recommendation.jpg" download><i class="fas fa-download"></i> Download Certificate</a>
                     <a href="" target="_blank"><i class="fas fa-external-link-alt"></i> Verify</a>
                 </div>
             </div>
